--- a/SetupMailConsolidator/AppOpener/AppOpener.csproj
+++ b/SetupMailConsolidator/AppOpener/AppOpener.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{30B9BD57-295F-4A10-86D9-A04A5A8092AB}</ProjectGuid>
+    <ProjectGuid>{2BC6C0DC-2FE2-450E-AC4D-BDDCF59DB61E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CsvReader</RootNamespace>
-    <AssemblyName>CsvReader</AssemblyName>
+    <RootNamespace>AppOpener</RootNamespace>
+    <AssemblyName>AppOpener</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,7 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
